--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- deps -->
     <script src="bower_components/eventEmitter/EventEmitter.js"></script>
     <script src="bower_components/versal-player-api/index.js"></script>
-    <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.9/peer.min.js"></script>
     <!-- gadget code -->
     <script src="gadget.js"></script>
   </body>
